引用テスト

--- a/02_01.md
+++ b/02_01.md
@@ -26,7 +26,7 @@ Paradox Interactive社のEuropa Universalis IVより
   
 ・近代アメリカ合衆国の哲学者ホワイトヘッドは、はっきりこう言っている  
 
-  「欧州の哲学的伝統の一般的特徴を最も確実に言うのであれば、「プラトンへの一連の脚注で構成されている」となる」  
+ > 「欧州の哲学的伝統の一般的特徴を最も確実に言うのであれば、「プラトンへの一連の脚注で構成されている」となる」  
   ※アルフレッド・ノース・ホワイトヘッド著『過程と実在』（原題”Process and Reality”）。ちなみにこの台詞は、原文だと”The safest general characterization of the European philosophical tradition is that it consists of a series of footnotes to Plato.”  
   
 ・プラトンは、古代ギリシアの哲学の巨人、その一人である  
@@ -130,14 +130,14 @@ https://upload.wikimedia.org/wikipedia/commons/2/2b/Greek_Colonization_Archaic_P
 ・彼が考えたのは、「永遠不変の存在はなんてものは、存在しない」という事である  
 ・この辺の説明は『史上最強の哲学入門』があまりにも分かりやすいので引用する  
   
-  　たとえば、硬い石でも叩けば割れるし、仮に割れなくてもその石同士をこすり合わせれば、割れないまでも表面が少しは削れるだろう。少しでも削れるということは、まったく永遠不変であるとはいえない。永遠という長い時間を想定すれば、その石もいつかは壊れて砂になり消え去ってしまうことは自明の理である。  
+>  　たとえば、硬い石でも叩けば割れるし、仮に割れなくてもその石同士をこすり合わせれば、割れないまでも表面が少しは削れるだろう。少しでも削れるということは、まったく永遠不変であるとはいえない。永遠という長い時間を想定すれば、その石もいつかは壊れて砂になり消え去ってしまうことは自明の理である。  
   　でも、だとすると、「細かい砂」になった石は、その後どうなるのだろうか？  
   　それはやっぱり砂なのだから、大地（土）の一部になるに違いない。だが、よく考えてみると、その大地から木がはえてきてリンゴがなるのである。ということは、リンゴは、あの砕いた石が変化したものであるということになる。  
   （中略）  
   　そして、彼は直観する。石は土になり、土は木になり、木はリンゴになる。それらの変化ははたしてデタラメに起こるのであろうか？　いや違う。そこには、万物共通の何らかのルールがあるはずだ。そう彼は考えたのだ。  
   　彼は、そのルールのことを**ロゴス**（法則）と名づけた。  
     
-  （飲茶著『史上最強の哲学入門』河出文庫）  
+ > （飲茶著『史上最強の哲学入門』河出文庫）  
   
 ・現代の科学者は、単に「目前にある世界を観察」するだけではない  
 ・「何かしらの法則に従って、この世はこうなってる筈だ」と考え、法則を探し出そうとする  
@@ -486,7 +486,11 @@ https://upload.wikimedia.org/wikipedia/commons/2/2b/Greek_Colonization_Archaic_P
 ・それでも、イデア界にいた頃の記憶が僅かにある為、イデアを想起する事ができるのである…と言う  
 ※また、人間はかつてイデア界にいた事から、本能的にイデアを求めるとする。この欲求を【エロース】と言い、想起を行う上での助けとなる  
   
-![](media/image4.png)・プラトンによれば、現象界、つまりこの現実世界には、何一つイデアは無い  
+![](media/image4.png)
+Veldkamp, Gabriele and Maurer, Markus, CC BY-SA 3.0 &lt;https://creativecommons.org/licenses/by-sa/3.0&gt;, via Wikimedia Commons  
+https://upload.wikimedia.org/wikipedia/commons/1/14/Plato_-_Allegory_of_the_Cave.png  
+
+・プラトンによれば、現象界、つまりこの現実世界には、何一つイデアは無い  
 ・この現実世界は、イデア界が映し出した影のようなもので、全ては偽物なのである  
 ・この事を、プラトンは［洞窟の比喩］によって説明する  
 ⇒もし仮に、生まれた時から洞窟に放り込まれ、鎖に繋がれた奴隷がいるとする。彼は昔から両手両足を拘束されており、歩いた事すらない。何なら首も満足に動かせず、洞窟の壁しか見た事がない。だからこの奴隷は、壁に映った影しか見た事がない（左図を参照）  
@@ -494,12 +498,6 @@ https://upload.wikimedia.org/wikipedia/commons/2/2b/Greek_Colonization_Archaic_P
 ・現象界に生きる我々は、丁度、この奴隷のようなものだとプラトンは言う  
 ⇒犬や牛の像が映した影を見て生きる奴隷のように、我々は、イデアが投影した影を見て生きている  
   
-  
-  
-  
-  
-Veldkamp, Gabriele and Maurer, Markus, CC BY-SA 3.0 &lt;https://creativecommons.org/licenses/by-sa/3.0&gt;, via Wikimedia Commons  
-https://upload.wikimedia.org/wikipedia/commons/1/14/Plato_-_Allegory_of_the_Cave.png  
 ・勿論、イデアには色々ある  
 ・三角形のイデアもあれば、机のイデアも、馬のイデアもある筈である  
 ・そういった様々なイデアの中でも特に大切なのが、【善のイデア】だとプラトンは言う  
@@ -622,11 +620,11 @@ https://upload.wikimedia.org/wikipedia/commons/1/14/Plato_-_Allegory_of_the_Cave
 ・言い換えれば、アリストテレスもまた、「モノの本質とは何か」を考えた  
 ・その基本的態度は、以下のようなものであった  
   
-  結局のところ、「人間がそういったイデアを仲介した仕組みで、世界を認識している」と想定したところで、何か新しい理解が得られるわけではない。だって、やっぱり「馬を見て、馬だと思った」ということ以外に、何の変わりもないからだ。  
-  （中略）  
-  むしろアリストテレスは、そんなイデアなんか持ち出すよりも、「現実の馬」をじっくりと観察して、「四本足だ」とか「タテガミがある」とか「ヒヅメがある」とか、そういう馬固有の性質をたくさん集めて、「馬とはどういうものか」をきちんと定義した方がよっぽどものの役に立つと考えた。  
+>  結局のところ、「人間がそういったイデアを仲介した仕組みで、世界を認識している」と想定したところで、何か新しい理解が得られるわけではない。だって、やっぱり「馬を見て、馬だと思った」ということ以外に、何の変わりもないからだ。  
+>  （中略）  
+>  むしろアリストテレスは、そんなイデアなんか持ち出すよりも、「現実の馬」をじっくりと観察して、「四本足だ」とか「タテガミがある」とか「ヒヅメがある」とか、そういう馬固有の性質をたくさん集めて、「馬とはどういうものか」をきちんと定義した方がよっぽどものの役に立つと考えた。  
     
-  （飲茶著『史上最強の哲学入門』河出文庫）  
+ > （飲茶著『史上最強の哲学入門』河出文庫）  
   
 ・例えば三角形の本質は、「三つの直線から成る」「三角の和が180度」といったもの  
 ・例えば机の本質は、「四本足である」「天板が載っている」といったもの  
